--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,3 +9,12 @@ services:
       - .:/go/src/go-tech-dojo
     ports:
       - 8080:8080
+  db:
+    image: postgres:latest
+    environment:
+      POSTGRES_USER: postgresu
+      POSTGRES_PASSWORD: postgrespassword
+      POSTGRES_DB: postgresdb
+      TZ: "Asia/Tokyo"
+    ports:
+      - 5432:5432
