--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,12 +9,22 @@ services:
       - .:/go/src/go-tech-dojo
     ports:
       - 8080:8080
-  db:
-    image: postgres:latest
     environment:
+      POSTGRES_HOST: db
+      POSTGRES_PORT: 5432
       POSTGRES_USER: postgresu
       POSTGRES_PASSWORD: postgrespassword
       POSTGRES_DB: postgresdb
+      PGSSLMODE: disable
+  db:
+    image: postgres:latest
+    environment:
+      POSTGRES_HOST: db
+      POSTGRES_PORT: 5432
+      POSTGRES_USER: postgresu
+      POSTGRES_PASSWORD: postgrespassword
+      POSTGRES_DB: postgresdb
+      PGSSLMODE: disable
       TZ: "Asia/Tokyo"
     ports:
       - 5432:5432
